Update HTML to reflect recent EJS updates

--- a/view/html/complete.html
+++ b/view/html/complete.html
@@ -79,7 +79,7 @@
 
                 <!-- 타이틀 박스 -->
                 <p class="popupContentText">결제가 완료되었습니다.</p>
-                <p class="popupContentText"><span id="timer" class="popupContentText">3</span>초 후에 메인화면으로 돌아갑니다.</p>
+                <p class="popupContentText"><span id="timer" class="popupContentText">5</span>초 후에 메인화면으로 돌아갑니다.</p>
 
                 <!-- 결제완료 이미지 -->
                 <div class="popupContentImg"></div>
@@ -105,12 +105,13 @@
     document.addEventListener("DOMContentLoaded", () => { // 3초뒤 종료
         const timer = document.getElementById("timer");
         timer.style.color = "white";
-        for (let i = 1; i <= 3; i++) {
+        const timerSecond = 5;
+        for (let i = 1; i <= timerSecond; i++) {
             setTimeout(() => {
-                timer.innerText = `${4 - i}`;
+                timer.innerText = `${(timerSecond + 1) - i}`;
 
-                if (i === 3) {
-                    window.location.href = "/showPayment";
+                if (i === timerSecond) {
+                    window.location.href = "/";
                 }
             }, i * 1000);
         }
