--- a/view/html/select_movie_time_popup.html
+++ b/view/html/select_movie_time_popup.html
@@ -273,8 +273,9 @@
                 timeSelectionBtn.style.display="block";
             });
         });
+
         timeSelectionBtn.addEventListener("click",()=>{
-           window.location.href("/select_seat");
+           window.location.href = "/select_headcount";
         })
 
     </script>
