--- a/view/html/payment.html
+++ b/view/html/payment.html
@@ -164,12 +164,12 @@
                     <!-- 카드결제 -->
                     <div class="cardPayment paymentOptionStyle">
                         <div id="paymentCard" class="paymentImg cardImg"></div>
-                        <div class="cardPaymentTouchArea"></div>
+                        <div id="cardPaymentTouchArea" class="cardPaymentTouchArea"></div>
                     </div>
                     <!-- 포인트사용 -->
                     <div class="pointsUsage paymentOptionStyle">
                         <div class="paymentImg pointImg"></div>
-                        <div class="pointsUsageTouchArea"></div>
+                        <div id="pointsUsageTouchArea" class="pointsUsageTouchArea"></div>
                     </div>
                 </article>
             </section>
@@ -188,11 +188,11 @@
         </section>
         <!-- ==script== -->
         <script>
-            const cardPayment = document.getElementById("cardPaymentTouchArea");
+            const paymentCard = document.getElementById("cardPaymentTouchArea");
             const pointsUsage = document.getElementById("pointsUsageTouchArea");
             // 카드 결제
             paymentCard.addEventListener("click", () => {
-                window.location.href = "/earnPoint";
+                window.location.href = "/earn_point";
             });
             // 포인트 사용
             pointsUsage.addEventListener("click", () => {
