--- a/view/html/payment_card_input_popup.html
+++ b/view/html/payment_card_input_popup.html
@@ -37,7 +37,8 @@
             background-size: cover;
         }
 
-        .timeoutText, .timer{
+        .timeoutText,
+        .timer {
             font-size: 2rem;
             color: #d6d6d6;
             margin-top: 2rem;
@@ -66,7 +67,7 @@
                 <section class="popupContent">
                     <!-- ~여기에 작성~ -->
                     <p class="popupContentText">카드를 카드 리더기에 삽입해 주세요.</p>
-                    <p  class="timeoutText"><span id="timer" class="timer">3</span>초 후 자동종료 됩니다.</p>
+                    <p class="timeoutText"><span id="timer" class="timer">5</span>초 후 자동종료 됩니다.</p>
                     <div class="popupContentImg"></div>
                 </section>
             </section>
@@ -87,15 +88,17 @@
     </div>
     <!-- ==script== -->
     <script>
+
         document.addEventListener("DOMContentLoaded", () => { // 5초뒤 종료
             const timer = document.getElementById("timer");
+            const timerSecond = 5;
             timer.style.color = "white";
-            for (let i = 1; i <= 3;i++) {
+            for (let i = 1; i <= timerSecond; i++) {
                 setTimeout(() => {
-                    timer.innerText = `${3 - i}`;
+                    timer.innerText = `${(timerSecond + 1) - i}`;
 
-                    if (i === 3) {
-                        window.location.href = "/showPayment";
+                    if (i === timerSecond) {
+                        window.location.href = "/show_payment";
                     }
                 }, i * 1000);
             }
