--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,13 @@
   font-size: 10px;
 }
 
+body {
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none;
+}
+
 /* ===최상위 컨테이너=== */
 .wrap {
   position: relative;
