--- a/view/bottomBarFrame.ejs
+++ b/view/bottomBarFrame.ejs
@@ -3,7 +3,7 @@
 <section class="bottomBar">
     <article class="barButtonsArea">
         <button class="barButtons staffCallButton">직원호출</button>
-        <button class="barButtons"><i class="bottomBarIcon fa-solid fa-house"></i></button>
+        <button id="homeButton" class="barButtons"><i class="bottomBarIcon fa-solid fa-house"></i></button>
         <button class="barButtons"><i class="bottomBarIcon fa-solid fa-backward"></i></button>
     </article>
     <img class="logoImg" src="images/logo.png" alt="로고이미지">
@@ -24,4 +24,9 @@
     setInterval(() => {
         updateClock();
     }, 5000);
+
+    const homeButton = document.getElementById("homeButton");
+    homeButton.addEventListener( "click", () => {
+        window.location.href = "/home";
+    } );
 </script>
