--- a/view/layout.ejs
+++ b/view/layout.ejs
@@ -13,73 +13,7 @@
     <!-- css -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="keypad.css">
-    <title>home</title>
-    <style>
-        .layoutArea {
-            display: flex;
-        }
-
-        .bookingNumberText {
-            color: white;
-            margin-bottom: 2rem;
-            font-size: 2.4rem;
-        }
-
-        .keypadBoxArea {
-            position: relative;
-            width: 50%;
-            height: 100%;
-        }
-
-        .keypadArea {
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            width: 35rem;
-            padding: 2rem;
-            height: 37.5rem;
-            align-content: center;
-            padding-left: 2.5rem;
-            text-align: center;
-        }
-
-        /* 현장예매 영역 */
-        .ticketBookingArea {
-            position: relative;
-            width: 50%;
-            height: 100%;
-            background-color: #323440db;
-        }
-
-        /* 현장예매 이미지 */
-        .ticketBookingImg {
-            position: absolute;
-            display: block;
-            width: 50%;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            transition: 0.3s;
-            border-radius: 1rem;
-            box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.455);
-        }
-
-        .ticketBookingTouchArea {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background: transparent;
-            left: 0;
-            top: 0;
-            z-index: 100;
-        }
-
-        .ticketBookingTouchArea:hover~.ticketBookingImg {
-            box-shadow: 0 0 12px 10px rgba(0, 0, 0, 0.355);
-        }
-    </style>
-
+    <title>Hexagon Cinema</title>
 </head>
 
 <body>
@@ -88,14 +22,23 @@
         <!-- ===레이아웃 영역=== -->
         <section class="layoutArea">
             <!-- ===사이드바 영역=== -->
-            <%- include( "sideBarFrame" ) %>
+            <% if ( sideBar !== "") { %>
+                <%- include( sideBar ) %>
+            <% } %>
             <!-- 페이지 콘텐츠 영역 -->
-            <%- include( "testContent" ) %>
+            <% if ( content !== "" ) { %>
+                <%- include( content ) %>
+            <% } %>
+            
             <!-- 팝업 영역 -->
-            <%- include("testPopup") %>
+            <% if ( popup !== "") { %>
+                <%- include( popup ) %>
+            <% } %>
         </section>
         <!-- ===하단바 영역=== -->
-        <%- include( "bottomBarFrame" ) %>
+        <% if ( bottomBar !== "" ) { %>
+            <%- include( bottomBar ) %>
+        <% } %>
 
     </div>
 </body>
