--- a/view/touch_page.ejs
+++ b/view/touch_page.ejs
@@ -12,7 +12,7 @@
   <script src="https://kit.fontawesome.com/611c1b2c45.js" crossorigin="anonymous"></script>
   <!-- css -->
   <link rel="stylesheet" href="style.css">
-  <title>touch_page</title>
+  <title>Welcome</title>
   <style>
     .logoImg {
       padding-left: 47.7rem;
