headCount_popup_function update

--- a/view/html/payment_point_selection_popup.html
+++ b/view/html/payment_point_selection_popup.html
@@ -139,7 +139,7 @@
         const earnPointNo = document.getElementById("earnPointNo");
 
         earnPointYes.addEventListener("click", () => {
-            window.location.href = "/inputPoint";
+            window.location.href = "/input_point";
         });
 
         earnPointNo.addEventListener("click", () => {
