--- a/view/payment_point_selection_popup.ejs
+++ b/view/payment_point_selection_popup.ejs
@@ -139,7 +139,7 @@
         const earnPointNo = document.getElementById("earnPointNo");
 
         earnPointYes.addEventListener("click", () => {
-            window.location.href = "/inputPoint";
+            window.location.href = "/input_point";
         });
 
         earnPointNo.addEventListener("click", () => {
