--- a/view/keypadFrame.ejs
+++ b/view/keypadFrame.ejs
@@ -11,4 +11,4 @@
         <button class="key delete"><i class="fa-solid fa-delete-left"></i></button>
         <button class="key">0</button>
         <button class="key">재입력</button>
-        <button class="check">확인</button>
+        <button id="checkBtn" class="check">확인</button>
