--- a/view/sideBarFrame.ejs
+++ b/view/sideBarFrame.ejs
@@ -1,6 +1,31 @@
 <section class="progressSidebar">
-    <div class="progressSettings completedStep"><span class="stepLabel">영화<br>선택</span></div>
-    <div class="progressSettings remainingStep"><span class="stepLabel">시간<br>선택</span></div>
-    <div class="progressSettings remainingStep"><span class="stepLabel">좌석<br>선택</span></div>
-    <div class="progressSettings remainingStep paymentStep"><span class="stepLabel">결제</span></div>
+    <div id="stepSelectMovie" class="progressSettings remainingStep"><span class="stepLabel">영화<br>선택</span></div>
+    <div id="stepSelectTime" class="progressSettings remainingStep"><span class="stepLabel">시간<br>선택</span></div>
+    <div id="stepSelectSeat" class="progressSettings remainingStep"><span class="stepLabel">좌석<br>선택</span></div>
+    <div id="stepPayment" class="progressSettings remainingStep paymentStep"><span class="stepLabel">결제</span></div>
 </section>
+
+<script>
+    const currentPage = new URL(window.location.href).pathname;
+
+    const progressPage = document.querySelectorAll(".progressSettings");
+
+    switch ( currentPage ) {
+        case "/movie_selection":
+            document.getElementById("stepSelectMovie").classList.replace( "remainingStep", "completedStep" );
+            break;
+        case "/select_movie_time_popup":
+        case "/select_headcount":
+            document.getElementById("stepSelectTime").classList.replace( "remainingStep", "completedStep" );
+            break;
+        case "/select_seat":
+            document.getElementById("stepSelectSeat").classList.replace( "remainingStep", "completedStep" );
+            break;
+        case "/payment":
+            document.getElementById("stepPayment").classList.replace( "remainingStep", "completedStep" );
+            break;
+    }
+    
+
+
+</script>
