--- a/public/keypad.css
+++ b/public/keypad.css
@@ -43,11 +43,14 @@
             width: 26.5rem;
             height: 4.5rem;
             margin: 0.4rem;
-            font-size: 1.8rem;
+            font-size: 2.4rem;
             /* border: none; */
             outline: none;
             background-color: #ffffffcf;
-            color: #EDEDED;
+            color: black;
+
+            line-height: 4.5rem;
+
             border-radius: 0.5rem;
             margin-left: 2rem;
 
