--- a/view/popup_ticket_print.ejs
+++ b/view/popup_ticket_print.ejs
@@ -1,7 +1,7 @@
 <section class="popupArea">
     <article class="popupBar">
         <p class="popupTitle popupBarTextCommon">티켓 출력 안내</p>
-        <i class="popupBarTextCommon fa-solid fa-x"></i>
+        <div id="closePopup"><i class="popupBarTextCommon fa-solid fa-x"></i></div>
     </article>
     <section class="popupContent">
         <p class="printLabel">티켓 출력을 진행해 주세요.</p>
