--- a/view/popup_payment_point_accumulation.ejs
+++ b/view/popup_payment_point_accumulation.ejs
@@ -1,7 +1,7 @@
 <section class="popupArea">
     <article class="popupBar">
         <p class="popupTitle popupBarTextCommon">포인트 적립 번호 요청</p>
-        <i class="popupBarTextCommon fa-solid fa-x"></i>
+        <div id="closePopup"><i class="popupBarTextCommon fa-solid fa-x"></i></div>
     </article>
     <section class="popupContent">
 
