--- a/view/popup_point_confirmation.ejs
+++ b/view/popup_point_confirmation.ejs
@@ -1,7 +1,7 @@
 <section class="popupArea">
     <article class="popupBar">
         <p class="popupTitle popupBarTextCommon">포인트 입력 요청</p>
-        <i class="popupBarTextCommon fa-solid fa-x"></i>
+        <div id="closePopup"><i class="popupBarTextCommon fa-solid fa-x"></i></div>
     </article>
     <section class="popupContent">
         <!-- ~여기에 작성~ -->
