--- a/view/popup_user_verification.ejs
+++ b/view/popup_user_verification.ejs
@@ -2,7 +2,7 @@
 <section class="popupArea">
     <article class="popupBar">
         <p class="popupTitle popupBarTextCommon">회원번호 입력 안내</p>
-        <i class="popupBarTextCommon fa-solid fa-x"></i>
+        <div id="closePopup"><i class="popupBarTextCommon fa-solid fa-x"></i></div>
     </article>
     <section class="popupContent">
         <!-- 키패드 영역 -->
