--- a/view/content_movie_selection.ejs
+++ b/view/content_movie_selection.ejs
@@ -78,7 +78,7 @@
     </section>
 
 </section>
-<div id="popupPos"></div>
+<section id="popupPos"></section>
 <script>
 
     class SelectionSwitcher {
@@ -144,14 +144,24 @@
     const posters = document.querySelectorAll(".posterItem");
     posters.forEach((poster) => {
         poster.addEventListener("click", () => {
-            //window.location.href = "/select_movie_time_popup";
+            // fetch(`/popup/popup_select_movie_time`)
+            //     .then(response => response.text())
+            //     .then(html => {
+            //         const container = document.getElementById("popupPos")
+            //         container.innerHTML = html;
 
-            fetch(`/popup/popup_select_movie_time`)
-                .then( response => response.text() )
-                .then( html => {
-                    document.getElementById("popupPos").innerHTML = html;
-                } );
+            //         // 동적으로 로드된 스크립트 태그 실행
+            //         const scripts = container.querySelectorAll("script");
+            //         scripts.forEach(script => {
+            //             const newScript = document.createElement("script");
+            //             newScript.text = script.text;
+            //             container.appendChild(newScript);
+            //         });
+            //         document.getElementById("popupArea").style.display = "block";
+            //     });
+            window.location.href = "/select_movie_time_popup";
         });
+        
     });
 
 </script>
