--- a/view/popup_layout.ejs
+++ b/view/popup_layout.ejs
@@ -1,5 +1,5 @@
 <!-- ===팝업 영역=== -->
-<section id="popup_select_movie_time" class="popupArea">
+<section id="popupArea" class="popupArea">
     <%- include( popupContent ) %>
 </section>
 
@@ -7,6 +7,8 @@
     const closePopup = document.getElementById("closePopup");
     closePopup.style = "cursor: pointer;";
     closePopup.addEventListener( "click", () => {
-        console.log("팝업 종료")
+        //document.getElementById("popupArea").style.display = "none";
+        location.reload();
     });
+
 </script>
