--- a/view/content_home.ejs
+++ b/view/content_home.ejs
@@ -5,12 +5,7 @@
 </section>
 <!-- 키패드 영역 -->
 <section class="keypadBoxArea">
-    <section class="keypadArea">
-        <p class="bookingNumberText">
-            예매 티켓 조회
-        </p>
-        <%- include("keypadFrame") %>
-    </section>
+    <%- include("keypadFrame", { title: "예매 티켓 조회" } ) %>
 </section>
 
 <script>
