--- a/view/popup_layout.ejs
+++ b/view/popup_layout.ejs
@@ -1,4 +1,5 @@
 <!-- ===팝업 영역=== -->
+<div id="popupBackground" class="popupBackground"></div>
 <section id="popupArea" class="popupArea">
     <%- include( popupContent ) %>
 </section>
@@ -8,7 +9,18 @@
     closePopup.style = "cursor: pointer;";
     closePopup.addEventListener( "click", () => {
         //document.getElementById("popupArea").style.display = "none";
-        location.reload();
+        history.back();
     });
 
 </script>
+
+<style>
+    .popupBackground {
+        width: 100%;
+        height: 100%;
+
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+</style>
