--- a/view/popup_user_verification.ejs
+++ b/view/popup_user_verification.ejs
@@ -7,9 +7,7 @@
     <section class="popupContent">
         <!-- 키패드 영역 -->
         <h2 class="popupTitleText">회원번호를 입력해주세요</h2>
-        <section class="keypadArea">
-            <%- include("keypadFrame") %>
-        </section>
+        <%- include("keypadFrame", { title: "" }) %>
     </section>
 </section>
 
