--- a/view/popup_payment_point_accumulation.ejs
+++ b/view/popup_payment_point_accumulation.ejs
@@ -8,9 +8,7 @@
         <!-- 키패드 영역 -->
         <p class="titleBox">포인트 적립할 번호를 입력해 주세요.</p>
         <div class="keypadAreaBackgruond">
-            <section class="keypadArea">
-                <%- include("keypadFrame") %>
-            </section>
+            <%- include("keypadFrame", {title: ""}) %>
         </div>
         <!-- 건너뛰기 버튼 -->
         <button id="notEarnPointBtn" class="nextBtn">건너뛰기</button>
